made the logo more visible

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
             <title>Quiz</title>
     </head>
     <body>
+        <header><!---Header will be used for navigation-->
+            <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"/>
+            <h1>HTML/CSS Quiz</h1>
+            <nav></nav>
+        </header>
+        <main><!---Main hosts the core content of the page-->
 
+        </main>
     </body>
 </html>
