--- a/index.html
+++ b/index.html
@@ -12,10 +12,41 @@
         <header><!---Header will be used for navigation-->
             <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"/>
             <h1>HTML/CSS Quiz</h1>
-            <nav></nav>
+            <nav>
+                <ul>
+                    <li><a href="#student-info">INFO</a></li>
+                    <li><a href="#html-questions">HTML</a></li>
+                    <li><a href="#css-questions">CSS</a></li>
+                </ul>
+            </nav>
         </header>
         <main><!---Main hosts the core content of the page-->
+            <form  method="post" action="https://freecodecamp.org/practice-project/accessibility-quiz">
+                <section aria-labelledby="student-info" role="region">
+                    <h2 id="student-info">Student Info</h2>
+                        <div class="info">
+                            <label></label>
+                            <input>
+                        </div>
+                        
+                        <div class="info">
+                            <label></label>
+                            <input>
+                        </div>
 
+                        <div class="info">
+                            <label></label>
+                            <input>
+                        </div>
+                </section>
+                <section aria-labelledby="html-questions" role="region">
+                    <h2 id="html-questions">HTML Questions</h2>
+                </section>
+                <section aria-labelledby="css-questions" role="region">
+                    <h2 id="css-questions">CSS Questions</h2>
+                </section>
+            </form>
+            
         </main>
     </body>
 </html>
