--- a/index.html
+++ b/index.html
@@ -25,23 +25,47 @@
                 <section aria-labelledby="student-info" role="region">
                     <h2 id="student-info">Student Info</h2>
                         <div class="info">
-                            <label></label>
-                            <input>
-                        </div>
-                        
-                        <div class="info">
-                            <label></label>
-                            <input>
+                            <label for="student-name">Name:</label>
+                            <input type="name" name="student-name" id="student-name">
                         </div>
 
                         <div class="info">
-                            <label></label>
-                            <input>
+                            <label for="student-email">Email:</label>
+                            <input id="student-email" type="email" name="email">
+                        </div>
+
+                        <div class="info">
+                            <label for="birth-date">D.O.B.:<span class="sr-only">(Date of Birth)</span></label>
+                            <input id="birth-date" type="date" name="birth-date">
                         </div>
                 </section>
+
                 <section aria-labelledby="html-questions" role="region">
                     <h2 id="html-questions">HTML Questions</h2>
+                        <div class="question-block">
+                            <p>1</p>
+                            <fieldset class="question">
+                                <legend></legend>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </fieldset>
+                        </div>
+
+                        <div class="question-block">
+                            <p>2</p>
+                            <fieldset class="question">
+                                <legend></legend>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </fieldset>
+                        </div>
+
                 </section>
+
                 <section aria-labelledby="css-questions" role="region">
                     <h2 id="css-questions">CSS Questions</h2>
                 </section>
