added some style to nav links

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <footer>            
             <address>
                 <!--The br tags will allow each part of the address to be on its own line and are useful for presenting address elements properly.-->
-                freeCodeCamp<br />
+                <a href="https://freecodecamp.org">freeCodeCamp</a><br />
                 San Francisco<br />
                 California<br />
                 USA
